k8s/resources/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway-service
  name: api-gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-service
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
        - env:
            - name: ACCOMMODATION_URL
              value: http://accommodation-service:3003
            - name: ALLOWED_ORIGIN
              value: http://localhost:3000
            - name: AUTH_URL
              value: http://authentication-service:3001
            - name: AVAILABILITIES_URL
              value: http://availability-service:3004
            - name: PORT
              value: "4200"
            - name: RABBITMQ_HOST
              value: some-rabbit
            - name: RABBITMQ_PASSWORD
              value: guest
            - name: RABBITMQ_PORT
              value: "5672"
            - name: RABBITMQ_USERNAME
              value: guest
            - name: USERS_URL
              value: http://user-service:3002
          image: dusanlazic/accommodatio-api-gateway:1.0.0
          name: api-gateway-service
          ports:
            - containerPort: 4200
              protocol: TCP
      restartPolicy: Always
