k8s/resources/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway-service
  name: api-gateway-service
spec:
  type: ClusterIP
  ports:
    - port: 4200
      targetPort: 4200
      protocol: TCP
  selector:
    app: api-gateway-service
